<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".books.BookActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:id="@+id/delete_layout"
        android:visibility="gone"
        android:layout_height="50dp">
        <TextView
            style="@style/book_text_bold_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete all books"
            android:textColor="@android:color/white"
            android:id="@+id/book_delete_all" />

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/books_recyclerview"
        android:layout_below="@+id/delete_layout"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        />

</RelativeLayout>
